--- a/src/app/cmps/publish-cmps/nadlan-form/nadlan-form.component.html
+++ b/src/app/cmps/publish-cmps/nadlan-form/nadlan-form.component.html
@@ -251,7 +251,7 @@
                 <label for="price">תאריך כניסה</label>
 
                 <div>
-                    <input type="date" style="width: 193px; text-align: end;" [value]="today" />
+                    <input type="date" style="width: 193px; text-align: end;" [value]="today" [min]="today" />
                     <label class="checkbox-label">
                         <input type="checkbox" disabled />
                         <span style="opacity: 0.6;">מיידי</span>
