--- a/src/app/cmps/publish-cmps/yad2-form/yad2-form.component.html
+++ b/src/app/cmps/publish-cmps/yad2-form/yad2-form.component.html
@@ -133,7 +133,7 @@
                         שדה חובה
                     </div>
                     <div *ngIf="itemName.hasError('pattern')">
-                        לא תקין
+                        לא תקין, נא להיצמד לדוגמא
                     </div>
                 </div>
             </div>
