--- a/src/app/app-root/app.component.html
+++ b/src/app/app-root/app.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="app-main-conntainer">
   <app-header *ngIf="!isAuthPage()" />
   <div>
     <router-outlet /> <!-- This will be replaced with something dynamic!!-->
   </div>
-  <app-footer />
+  <app-footer class="footer" />
 </div>
