--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;450;500;600;700&display=swap');
 
 * {
     margin: 0px;
