* Polished details page for yad2 item

--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -4,8 +4,8 @@
             <img src="/gal2-logo.png" height="40px" alt="Gal2 Logo" />
         </a>
         <div class="header-options">
-            <span>נדל״ן</span>
-            <span>דירות חדשות</span>
+            <a routerLink="/realestate"><span>נדל״ן</span></a>
+            <a routerLink="/realestate"><span>דירות חדשות</span></a>
             <span>רכב</span>
             <span>יד שנייה</span>
             <span>דרושים IL</span>
