--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,8 @@ body {
     opacity: 1 !important;
     font-family: 'Rubik', sans-serif !important;
 }
+
+a {
+    all: unset;
+    cursor: pointer;
+}
