--- a/src/app/cmps/details/details.component.scss
+++ b/src/app/cmps/details/details.component.scss
@@ -64,125 +64,111 @@
         margin-top: 24px;
         gap: 16px;
 
-        .details-left-price {
-            width: 475px;
-            padding: 16px;
-            height: fit-content;
-            border-radius: 8px;
-            box-shadow: 0 1px 8px rgba(0, 0, 0, 0.15);
-            display: flex;
-            flex-direction: column;
-            text-align: right;
 
-            .price {
-                font-size: 32px;
-                font-weight: 500;
-                opacity: 0.85;
-                margin-bottom: 10px;
-            }
 
-            .cta {
-                margin-top: 12px;
+    }
 
-                .btn-primary {
-                    width: 100%;
-                    padding: 12px;
-                    justify-content: center;
-                    align-content: center;
-                    font-size: 20px;
-                    border: none;
-                    border-radius: 24px;
-                    background-color: #10ad6f;
-                    color: #fff;
-                    cursor: pointer;
-                    margin-bottom: 25px;
-                }
+    .cta {
+        margin-top: 12px;
 
-                .btn-primary.yad2 {
-                    background-color: #ff7404;
-                }
-
-                .btn-secondary {
-                    margin-top: 8px;
-                    width: 100%;
-                    color: #10ad6f;
-                    font-weight: 550;
-                    padding: 12px;
-                    border: 1px solid #10ad6f;
-                    border-radius: 452px;
-                    background: transparent;
-                    font-size: 16px;
-                    cursor: pointer;
-                }
-
-                .btn-secondary.yad2 {
-                    gap: 4px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    background-color: #f7faff;
-                    font-weight: 500;
-                    color: #1a73e8;
-                    border: 1px solid #1a73e8;
-                    padding: 12px 24px;
-                    transition: background-color 0.2s ease;
-                }
-            }
+        .btn-primary {
+            width: 100%;
+            padding: 12px;
+            justify-content: center;
+            align-content: center;
+            font-size: 20px;
+            border: none;
+            border-radius: 24px;
+            background-color: #10ad6f;
+            color: #fff;
+            cursor: pointer;
+            margin-bottom: 25px;
         }
 
-        .details-right-info {
-            display: flex;
-            flex-direction: column;
+        .btn-primary.yad2 {
+            background-color: #ff7404;
+        }
+
+        .btn-secondary {
+            margin-top: 8px;
             width: 100%;
-            gap: 8px;
-            direction: rtl;
+            color: #10ad6f;
+            font-weight: 550;
+            padding: 12px;
+            border: 1px solid #10ad6f;
+            border-radius: 452px;
+            background: transparent;
+            font-size: 16px;
+            cursor: pointer;
+        }
 
-            .title {
-                font-size: 26px;
-                font-weight: bold;
-            }
-
-            .address {
-                margin-bottom: 20px;
-                opacity: 0.75;
-                font-size: 18px;
-            }
-
-            .meta {
-                display: flex;
-                width: fit-content;
-                gap: 40px;
-                font-size: 18px;
-                border: 1px solid rgba(100, 100, 100, 0.26);
-                opacity: 0.75;
-                border-radius: 10px;
-                padding: 20px;
-                align-items: center;
-                justify-items: center;
-                justify-content: center;
-
-                .icon {
-                    margin-right: 4px;
-                }
-
-                svg {
-                    position: relative;
-                    top: 5px;
-                    margin-left: 4px;
-                    width: 1.3em;
-                    height: 1.3em;
-                }
-            }
-
-            .description {
-                margin-top: 18px;
-                line-height: 1.5;
-                color: #333;
-            }
+        .btn-secondary.yad2 {
+            gap: 4px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f7faff;
+            font-weight: 500;
+            color: #1a73e8;
+            border: 1px solid #1a73e8;
+            padding: 12px 24px;
+            transition: background-color 0.2s ease;
         }
     }
 
+    .details-right-info {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 8px;
+        direction: rtl;
+
+        .title {
+            font-size: 26px;
+            font-weight: bold;
+        }
+
+        .address {
+            margin-bottom: 20px;
+            opacity: 0.75;
+            font-size: 18px;
+        }
+
+        .meta {
+            display: flex;
+            width: fit-content;
+            gap: 40px;
+            font-size: 18px;
+            border: 1px solid rgba(100, 100, 100, 0.26);
+            opacity: 0.75;
+            border-radius: 10px;
+            padding: 20px;
+            align-items: center;
+            justify-items: center;
+            justify-content: center;
+
+            .icon {
+                margin-right: 4px;
+            }
+
+            svg {
+                position: relative;
+                top: 5px;
+                margin-left: 4px;
+                width: 1.3em;
+                height: 1.3em;
+            }
+        }
+
+        .description {
+            margin-top: 18px;
+            line-height: 1.5;
+            color: #333;
+        }
+    }
 }
+
+
 
 .phoneNumber {
     justify-self: center;
@@ -269,7 +255,7 @@
 }
 
 .yad2-main-image {
-    height: 500px;
+    max-height: 500px;
     max-width: 700px;
     border-radius: 5px;
 }
@@ -287,4 +273,35 @@
     width: 120px;
     object-fit: cover;
     border-radius: 3px;
+}
+
+.yad2-top-container {
+    display: flex;
+    direction: rtl;
+    justify-content: space-between;
+    margin-left: 50px;
+    gap: 15px;
+}
+
+.details-left-price {
+    width: 475px;
+    padding: 16px;
+    height: fit-content;
+    border-radius: 8px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.15);
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+
+    .price {
+        font-size: 32px;
+        font-weight: 500;
+        opacity: 0.85;
+        margin-bottom: 10px;
+    }
+}
+
+.details-left-price.yad2 {
+    width: 375px;
+    margin-top: 100px;
 }
