--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -5,11 +5,13 @@
 
     <div class="categories">
         <div>
-            <img src="\bubbles-category\leading-category-yad1.webp" alt="Gal2 Logo" />
+            <a routerLink="/realestate"><img src="\bubbles-category\leading-category-yad1.webp" alt="Gal2 Logo" /></a>
             <p>דירות חדשות</p>
         </div>
         <div>
-            <img src="\bubbles-category\leading-category-real-estate.webp" alt="Gal2 Logo" />
+            <a routerLink="/realestate">
+                <img src="\bubbles-category\leading-category-real-estate.webp" alt="Gal2 Logo" />
+            </a>
             <p>נדל״ן</p>
         </div>
         <div>
@@ -43,20 +45,21 @@
             </p-carousel>
         </div>
         <img src="/fake-ad.webp" alt="Gal2 Logo" />
-        <div>
-            <p class="category_title">רכב</p>
-            <p-carousel [value]="allVehicles" [numVisible]="4" [numScroll]="2" [circular]="true">
-                <ng-template pTemplate="item" let-vehicles>
-                    <app-card [item]="vehicles" />
-                </ng-template>
-            </p-carousel>
-        </div>
+
 
         <div>
             <p class="category_title">יד 2</p>
             <p-carousel [value]="allYad2" [numVisible]="4" [numScroll]="2" [circular]="true">
                 <ng-template pTemplate="item" let-yad2>
                     <app-card [item]="yad2" />
+                </ng-template>
+            </p-carousel>
+        </div>
+        <div>
+            <p class="category_title">רכב</p>
+            <p-carousel [value]="allVehicles" [numVisible]="4" [numScroll]="2" [circular]="true">
+                <ng-template pTemplate="item" let-vehicles>
+                    <app-card [item]="vehicles" />
                 </ng-template>
             </p-carousel>
         </div>
