* Added map component with houses coordinates markers on the map * Added fallback img support to all img's in the app * Login/SIgnup UI Fixes and adjustments

--- a/src/app/app-root/app.component.html
+++ b/src/app/app-root/app.component.html
@@ -1,6 +1,6 @@
 <div class="app-main-conntainer">
-  <app-header *ngIf="!isAuthPage()" />
-  <div>
+  <app-header *ngIf="renderHeader()" />
+  <div [ngStyle]="renderHeader() ? {'margin-top': '65px'} : {}">
     <router-outlet /> <!-- This will be replaced with something dynamic!!-->
   </div>
   <app-footer class="footer" />
