--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -1,5 +1,7 @@
 <div class="signup-page-background">
-    <img class="signup-gal2" src="/gal2-logo.png" alt="Gal2 Logo" />
+    <a routerLink="/">
+        <img class="signup-gal2" src="/gal2-logo.png" alt="Gal2 Logo" />
+    </a>
 
     <div class="signup-main-container" dir="rtl">
         <h2 class="signup-title">היי, נעים להכיר</h2>
@@ -59,7 +61,9 @@
         <p class="signup-text">
             כבר יש לך חשבון?
             <a class="signup-link" href="/login">להתחברות</a>
+
         </p>
+
 
     </div>
 </div>
