--- a/src/app/cmps/app-header/app-header.component.scss
+++ b/src/app/cmps/app-header/app-header.component.scss
@@ -1,13 +1,16 @@
 .header-main {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: rgb(255, 255, 255, 0.97);
     display: flex;
     justify-content: space-between;
     padding: 10px 25px 10px 5px;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
-    position: relative;
-    overflow: visible;
     direction: rtl;
     white-space: nowrap;
-    //   width: fit-content;
 }
 
 
