--- a/src/app/cmps/publish-cmps/index-page/index-page.component.html
+++ b/src/app/cmps/publish-cmps/index-page/index-page.component.html
@@ -4,8 +4,8 @@
         <a routerLink="/publish/nadlan" style="all: unset">
             <div class="category-card">
                 <div class="category-icon">
-                    <img src="nadlan.svg" alt="נדל״ן" class="icon-default" />
-                    <img src="nadlan_active.svg" alt="נדל״ן" class="icon-active" />
+                    <img src="assets/nadlan.svg" alt="נדל״ן" class="icon-default" />
+                    <img src="assets/nadlan_active.svg" alt="נדל״ן" class="icon-active" />
                 </div>
                 <h3 class="category-title">נדל"ן</h3>
                 <p class="category-subtitle">מכירה, השכרה, מסחרי</p>
@@ -15,8 +15,8 @@
         <a routerLink="/publish/vehicle" style="all: unset">
             <div class="category-card">
                 <div class="category-icon">
-                    <img src="vehicle.svg" alt="רכב" class="icon-default" />
-                    <img src="vehicle_active.svg" alt="רכב" class="icon-active" />
+                    <img src="assets/vehicle.svg" alt="רכב" class="icon-default" />
+                    <img src="assets/vehicle_active.svg" alt="רכב" class="icon-active" />
                 </div>
                 <h3 class="category-title">כלי רכב</h3>
                 <p class="category-subtitle">כלי רכב, דו גלגלי, כלי שיט, מיוחדים
@@ -27,8 +27,8 @@
         <a routerLink="/publish/yad2" style="all: unset">
             <div class="category-card special-card">
                 <div class="category-icon">
-                    <img src="second_hand.svg" alt="יד שנייה" class="icon-default" />
-                    <img src="second_hand_active.svg" alt="יד שנייה" class="icon-active" />
+                    <img src="assets/second_hand.svg" alt="יד שנייה" class="icon-default" />
+                    <img src="assets/second_hand_active.svg" alt="יד שנייה" class="icon-active" />
                 </div>
                 <h3 class="category-title">יד שניה</h3>
                 <p class="category-subtitle">לבית לגינה ולמשרד, חשמל, ספורט<br> פנאי ושונות</p>
@@ -36,5 +36,4 @@
             </div>
         </a>
     </div>
-
 </div>
