--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,5 +1,8 @@
 <div class="login-page-background">
-    <img class="login-gal2" src="/gal2-logo.png" alt="Gal2 Logo" />
+    <a routerLink="/">
+        <img class="login-gal2" [src]="'/assets/gal2-logo.png'" alt="Gal2 Logo" />
+
+    </a>
     <div class="login-main-container" dir="rtl">
         <h2 class="login-title">היי, טוב לראות אותך</h2>
 
@@ -30,5 +33,6 @@
         <p class="signup-text">
             אין לך חשבון? <a class="signup-link" href="/signup">להרשמה</a>
         </p>
+        <a routerLink="/" style="margin-top: 20px; font-size: 13px; opacity: 0.4;">חזרה לדף הבית</a>
     </div>
 </div>
