--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,6 +1,7 @@
 .login-page-background {
     background-color: #fff8ef;
     min-height: 100vh;
+    direction: rtl;
 
 }
 
@@ -10,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-self: center;
-    padding: 60px 0px;
+    padding: 60px 0px 15px 0px;
     font-family: Arial, sans-serif;
     width: 500px;
     border-radius: 4px;
@@ -80,6 +81,7 @@ form input {
     margin-top: 20px;
     font-size: 14px;
     color: #333;
+    margin-bottom: 15px;
 }
 
 .signup-link {
@@ -97,8 +99,8 @@ form input {
 
 
 .login-gal2 {
-    display: flex;
-    justify-self: flex-end;
+    display: inline-flex;
+    direction: rtl;
     padding: 30px 50px;
     height: 40px;
 
