* Added caching for houses on map to reduce redundant API calls each time user visits real estate page (map page)

--- a/src/app/cmps/map/map.component.html
+++ b/src/app/cmps/map/map.component.html
@@ -1,1 +1,4 @@
-<p>map works!</p>
+<div *ngIf="isLoading" class="loading-overlay">
+    <div class="spinner"></div>
+</div>
+<div id="map" class="map-container" [class.map-blur]="isLoading"></div>
